# simple-perceiver

./: .devcontainer.json  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
