[tool.poetry]
name = "simple-perceiver"
version = "0.1.0"
description = ""
authors = ["Cristian Garcia <cgarcia.e88@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6.1,<3.9"
einops = "^0.3.0"
debugpy = "^1.2.1"
dataget = "^0.4.15"
typer = "^0.3.2"
matplotlib = "^3.3.4"
elegy = "^0.7.1"
jax = "^0.2.13"
jaxlib = "^0.1.67"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
